# medical_net

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  ENHANCED_FEATURES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  README_AI_AGENT.md  gole.md  pyproject.toml  test_ai_agent.py
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  http_client.py  logging.py
app/db/: init_db.py  seed.py  seed_tcm.py  session.py
app/graphql_api/: resolvers.py  schema.py  types.py
app/models/: __init__.py  condition.py  drug.py  drug_condition.py  drug_interaction.py  evidence.py  tcm.py
app/schemas/: condition.py  drug.py  graph.py  graph_models.py  interaction.py  medication.py  tcm.py
app/services/: ai_agent_service.py  cache_service.py  drug_interaction_enhanced.py  drug_service.py  openfda_service.py  rxnorm_service.py  tcm_seed_loader.py
data/seed/: anticoagulant_tcm.yaml
docs/: AI_AGENT_GUIDE.md  INTERACTION_ANALYSIS_GUIDE.md  architecture.md  data-model.md  development.md  technical_report_openfda_etl_update.md
etl/: Dockerfile  pyproject.toml
etl/config/: sources.yaml
etl/pipelines/: config.py  registry.py  scheduler.py
etl/requirements/: base.txt  dev.txt
etl/tests/: test_config.py  test_openfda_adapter.py  (+1 more)
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
infrastructure/: docker-compose.yaml
requirements/: base.txt  dev.txt
tests/: conftest.py  test_drugs_api.py  test_health.py  test_tcm_interactions.py
(+39 files in other folders)
